# las_well_cleaner_visualiser

./: test.py
wellclnpy_root/: README.md  setup.cfg
wellclnpy_root/data/: test.las
wellclnpy_root/docs/: conf.py  index.rst  wellclnpy.rst
wellclnpy_root/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  wellclnpy.doctree
wellclnpy_root/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  wellclnpy.html
wellclnpy_root/docs/_build/html/_sources/: modules.rst.txt
wellclnpy_root/tests/: test_wellcleaner.py  test_wellclnpy.py
wellclnpy_root/tests/data/clean_las/: test_clean.las
wellclnpy_root/wellclnpy/: __init__.py  example.py  wellcleaner.py  wellclnpy.py
