[metadata]
name = wellclnpy
version = attr: wellclnpy.__version__
author = Anthony Beech
author_email = abeech123@virginmedia.com
description = Tool for cleaning well data
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
packages = wellclnpy
python_requires = >=3.6
install_requires =
    numpy
    pandas
    matplotlib
    lasio

[options.extras_require]
docs = sphinx; sphinxcontrib-apidoc; myst_nb; furo
test = pytest; pytest-cov; pytest-mpl
dev = build; pytest; pytest-cov; pytest-mpl; sphinx; sphinxcontrib-apidoc; myst_nb; furo